--- a/IMDB/css/style.css
+++ b/IMDB/css/style.css
@@ -48,6 +48,18 @@
     padding-bottom: 4px;
 }
 
+.fovorite-list-card {
+    border: 1px solid #FF7F50;
+    border-radius: 10px;
+    background-color: #F8F6F2;
+    width: 150px;
+    position: absolute;
+    top: 90px;
+    left: 424px;
+    padding-top: 5px;
+}
+
+
 .movie-favorite-ico {
     position: absolute;
     left: 560px;
@@ -57,8 +69,44 @@
 .movie-list-ico {
     position: absolute;
     left: 560px;
-    top: 48px;
+    top: 75px;
     cursor: pointer;
+    z-index: 1;
+}
+
+.movie-watched-ico {
+    position: absolute;
+    left: 563px;
+    top: 50px;
+    cursor: pointer;
+}
+
+.movie-video-logined-ico {
+    position: absolute;
+    left: 563px;
+    top: 107px;
+    cursor: pointer;
+}
+
+
+.movie-video-not-logined-ico {
+    position: absolute;
+    left: 563px;
+    top: 22px;
+    cursor: pointer;
+}
+
+.movie-favorite-list-header {
+    font-size: 10pt;
+    vertical-align: top;
+    position: relative;
+    top: 8px;
+    padding-left: 5px;
+}
+
+.movie-list-header-ico {
+    cursor: pointer;
+    padding-left: 5px;
 }
 
 /*** Film Künyesi CSS end ***/
@@ -137,5 +185,7 @@ html, body {
     margin-bottom: 10px;
 }
 
-
+body {
+	background-color: transparent;
+}
 
