--- a/IMDB/css/style.css
+++ b/IMDB/css/style.css
@@ -39,26 +39,59 @@
 
 .movie-card {
     border: 1px solid #FF7F50;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: #F8F6F2;
     width: 550px;
     padding-left: 8px;
     padding-right: 8px;
     padding-top: 7px;
     padding-bottom: 4px;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    background-position: right top;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .fovorite-list-card {
     border: 1px solid #FF7F50;
-    border-radius: 10px;
-    background-color: #F8F6F2;
-    width: 150px;
+    border-radius: 5px;
+    width: 395px;
+    height: 145px;
     position: absolute;
-    top: 90px;
-    left: 424px;
+    top: 115px;
+    left: 180px;
     padding-top: 5px;
+    backdrop-filter: blur(5px);
+    overflow-y: auto;
+    background-color: rgba(255,227,217,0.70);
+    box-shadow: rgba(255, 127, 80, 0.45) 0px 25px 20px -20px;
 }
 
+.score-list-card {
+    border: 1px solid #FF7F50;
+    border-radius: 15px;
+    width: 160px;
+    height: 19px;
+    position: absolute;
+    top: 75px;
+    left: 426px;
+    padding-top: 5px;
+    backdrop-filter: blur(5px);
+    background-color: rgba(255,227,217,0.70);
+}
+
+.fovorite-list-card::-webkit-scrollbar {
+    width: 3px;
+    background-color: #none;
+    border-left: 1px solid #none;
+}
+.fovorite-list-card::-webkit-scrollbar-thumb {
+    background-color: #FF7F50;
+}
+.fovorite-list-card::-webkit-scrollbar-thumb:hover {
+    background-color: #FF7F50;
+}
 
 .movie-favorite-ico {
     position: absolute;
@@ -69,7 +102,7 @@
 .movie-list-ico {
     position: absolute;
     left: 560px;
-    top: 75px;
+    top: 100px;
     cursor: pointer;
     z-index: 1;
 }
@@ -79,6 +112,14 @@
     left: 563px;
     top: 50px;
     cursor: pointer;
+}
+
+.movie-score-ico {
+    position: absolute;
+    left: 562px;
+    top: 75px;
+    cursor: pointer;
+    z-index: 999;
 }
 
 .movie-video-logined-ico {
@@ -109,18 +150,31 @@
     padding-left: 5px;
 }
 
+.rate-box-img-div {
+    text-align: left;
+    padding-left: 5px;
+    margin-top: -9px;
+}
+
+.rate-star{
+    margin: 0px;
+    padding: 0px;
+    padding-bottom: 3px;
+    padding-top: 3px;
+}
 /*** Film Künyesi CSS end ***/
 /*** Oyuncu Künyesi CSS start ***/
 
 .person-card {
     border: 1px solid #FF7F50;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: #F8F6F2;
     width: 550px;
     padding-left: 8px;
     padding-right: 8px;
     padding-top: 7px;
     padding-bottom: 4px;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
 .person-poster {
@@ -188,4 +242,5 @@ html, body {
 body {
 	background-color: transparent;
 }
+
 
